# torchlars

./: pyproject.toml  setup.py
torchlars/: adaptive_lr.cc  adaptive_lr_cuda.cu  lars.py
